force-app/main/default/objects/Record_Access_Log__b/Record_Access_Log__b.object-meta.xml
<CustomObject>
    <description>This big object contains the access logs of records. It stores the user id, record id, date/time and browser/version</description>
    <label>Record Access Log</label>
    <pluralLabel>Record Access Logs</pluralLabel>
</CustomObject>