force-app/main/default/objects/Record_Access_Log__b/fields/Access_Id__c.field-meta.xml
<CustomField>
    <fullName>Access_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The Id of the big object record, created by using the record Id, User Id and timestamp</description>
    <label>Access Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>