force-app/main/default/objects/Record_Access_Log__b/fields/Browser_Details__c.field-meta.xml
<CustomField>
    <fullName>Browser_Details__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The browser used to access the record and the version of that browser</description>
    <label>Browser Details</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>