force-app/main/default/objects/Record_Access_Log__b/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The Id of the record accessed</description>
    <label>Record Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>