force-app/main/default/objects/Record_Access_Log__b/fields/Time_Accessed__c.field-meta.xml
<CustomField>
    <fullName>Time_Accessed__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The date and time the record was accessed</description>
    <label>Time Accessed</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>