force-app/main/default/objects/Record_Access_Log__b/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The user who access the record</description>
    <label>User</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>